--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,6 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.karumi:dexter:4.2.0'
     implementation 'com.startapp:inapp-sdk:3.10.1'
-//    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
     implementation 'com.github.khirr:Android-Privacy-Policy:1.0.1'
 }
